--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/8.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/8.md
@@ -1,34 +1,24 @@
-﻿# Leerdoel 8 - Deployment
+﻿# Leerdoel 8 - Nieuwe Technologie
+Het is belangrijk voor softwareontwikkelaars en andere ICT-medewerkers om mee te gaan met de laatste ontwikkelingen, en om regelmatig nieuwe technologieën te onderzoeken. Ik had daarom aan het begin van mijn stage besloten dat ik minimaal 1 nieuwe technologie wilde bestuderen en gebruiken.
 
-Tijdens het zoeken naar informatie voor mijn 1ste- en 2dejaars projecten kwam ik vaak informatie tegen over het uitrollen van (nieuwe en bestaande) systemen. Zo kwam ik bijvoorbeeld de termen _Continuous Deployment_ en _Continuous Integration_ (CI/CD) tegen, wat refereert naar systemen die volledig automatisch andere systemen kunnen klaarmaken voor gebruik. Omdat ik meer wilde weten over hoe systemen worden uitgerolt binnen een organisatie, heb ik besloten om hier een leerdoel van te maken. Dit ook omdat ik verwacht later tijdens mijn werk regelmatig dit soort processen te moeten doorlopen.
+Het kwam dus ook goed uit dat ik als onderdeel van mijn stageopdracht met Blazor moest werken. Door aan mijn stageopdracht te werken, werkte ik dus ook gelijk aan dit leerdoel.
 
-## Werkwijze
+## Blazor
+[Blazor](https://dotnet.microsoft.com/apps/aspnet/web-apps/blazor) is een onderdeel van het ASP.NET Core. Blazor geeft ontwikkelaars de mogelijkheid om interactieve websites te bouwen met C#, terwijl dit normaalgesproken wordt gedaan met JavaScript.
 
-Ik ben met dit leerdoel begonnen door te onderzoeken of ik een _CI/CD pipeline_ of ander deployment process kon opzetten voor deze website. Al vrij snel kwam ik [GitHub Actions](https://github.com/features/actions) tegen; een onderdeel van GitHub waarmee ontwikkelaars gemakkelijk een _CI/CD pipeline_ konden opzetten om zo hun applicaties automatisch te _builden_, testen, en uit te rollen. Toevallig had ik deze functionaliteit eerder al eens gebruikt voor een hobbyproject, zonder te realiseren dat ik een _CI/CD pipeline_ had opgezet. Het was daarom ook niet moeilijk om op basis van dit hobbyproject, de [GitHub Actions documentatie](https://docs.github.com/en/free-pro-team@latest/actions), en [informatie van het internet](https://swimburger.net/blog/dotnet/how-to-deploy-aspnet-blazor-webassembly-to-github-pages) een nieuwe pipeline op te zetten voor deze website. Een beschrijving van deze pipeline is hieronder te vinden als Bewijsmateriaal 1.
+Op het moment zijn er twee varianten van Blazor beschikbaar. De eerste variant is Blazor Server, waarbij alle C# code op de server wordt uitgevoerd. De browser download alleen een klein JavaScript package, en gebruikt deze om via een zogehete *SignalR* verbinding te maken met de server. Alle acties van de client (bijvoorbeeld button clicks) en alle UI updates van de server worden via deze verbinding verzonden. Deze variant vereist een server om alle code op uit te voeren, en werkt daardoor niet met statische webservers zoals [GitHub Pages](https://pages.github.com/).
 
-Ranshuijsen gebruikt echter een geheel ander process om hun applicaties uit te rollen. Zij hebben hiervoor zelf een tool ontwikkeld, genaamd _RvlBuildToolkit_.
-==TODO Uitzoeken hoe deze tool werkt==
+De tweede variant is Blazor WebAssembly (afgekort Blazor WASM). Deze variant stuurt de gehele Blazor applicatie, alle dependencies, en een kleine versie van de .NET Runtime naar de browser. De gehele applicatie wordt dan uitgevoerd binnen de browser, net zoals de meeste websites dit doen. In tegenstelling tot Blazor Server kan Blazor WebAssembly wel worden gebruikt samen met statische webservers, omdat er geen aparte server nodig is. Als de browser alle benodigde bestanden kan downloaden, dan is dat voldoende.
 
-## Bewijsmateriaal 1 - GitHub Actions
+Microsoft is bezig met het ontwikkelen van drie andere Blazor varianten, die elk weer in andere scenarios handig kunnen zijn. Op het moment is er weinig informatie over deze varianten beschikbaar.
 
-Ook deze website maakt gebruik van een CI/CD pipeline. Deze Pipeline is opgezet met behulp van [GitHub Actions](https://github.com/features/actions).
+De voor- en nadelen van deze technologie zijn te lezen in het [Adviesrapport](Content/Stage3/Bewijsmateriaal/4) dat ik heb geschreven als bewijsmateriaal voor [Leerdoel 4](Content/Stage3/Leerdoelen/4). Voor meer informatie over de verschillende varianten van Blazor, zie de [ASP.NET Core Blazor hosting models](https://docs.microsoft.com/en-us/aspnet/core/blazor/hosting-models?view=aspnetcore-3.1) pagina op de officiele Microsoft website.
 
-Elke keer als ik een deel van de text of code aanpas, dan wordt er automatisch een script uitgevoerd die mijn website update naar de laatste versie. Dit script is [hier te vinden](https://github.com/TehNolz/Portfolio/blob/master/.github/workflows/update.yml)
+## Bewijsmateriaal
 
-Het script werkt als volgt;
+Als onderdeel van mijn stageopdracht heb ik het CRM systeem van Ranshuijsen deels omgezet naar Blazor, een vrij recent onderdeel van Microsoft’s ASP.NET Core framework. Ik heb dan ook dit leerdoel behaald door deze nieuwe technologie te bestuderen en te gebruiken tijdens mijn stageopdracht. Zie [deze pagina](Content/Stage3/Stageopdracht) voor meer informatie over de werkzaamheden die ik als onderdeel van mijn stageopdracht heb uitgevoerd.
 
-* De Git repository waar de broncode van de website in staat wordt gedownload,
-* .NET Core wordt klaargemaakt voor gebruik,
-* Alle _unit tests_ (zie [Leerdoel 5 - Testen](Content/Stage3/Leerdoelen/5)) worden uitgevoerd. Mocht er een test mislukken, dan zal de update direct worden gestopt en zal ik hier een melding over krijgen.
-* De website wordt genereerd. Alle bestanden worden door .NET Core klaargemaakt zodat een browser ze zou kunnen laden.
-* De _base tag_ wordt aangepast, zodat alle pagina links binnen in de website correct zullen functioneren.
-* Een fix wordt toegepast zodat 404-foutpaginas worden doorgestuurd naar de hoofdpagina van mijn website, zodat Blazor deze fouten zelf kan afhandelen in plaats van dat GitHub dit doet.
-* Een fix wordt toegepast die een conflict met Jekyll oplost. Jekyll is een systeem dat Markdown en andere bestanden kan omzetten naar statische websites, en zit ingebouwd in [GitHub Pages](https://pages.github.com/). Dit zorgt er echter voor dat Blazor niet meer werk. Deze stap verteld GitHub om Jekyll uit te zetten door een leeg bestand genaamd `.nojekyll` in de map van de website te plaatsen.
-* De website wordt gepubliceerd naar GitHub pages. Dit wordt gedaan doormiddel van [github-pages-deploy-action](https://github.com/JamesIves/github-pages-deploy-action).
-
-Na het uitvoeren van dit scriptbestand, is de website geheel up-to-date. Mocht in 1 van de stappen een fout optreden, dan krijg ik automatisch een bericht van GitHub die mij hierover inlicht.
-
-## Bewijsmateriaal 2 - Deploymentproces van Ranshuijsen
+Ook heb ik Blazor WASM gebruikt tijdens het opzetten van mijn portfoliowebsite. De broncode van deze website is te vinden op [GitHub](https://github.com/TehNolz/Portfolio).
 
 ## Feedback bedrijfsbegeleider/collega
 ==TODO feedback==
