--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/1.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/1.md
@@ -3,7 +3,11 @@ Toen ik begon met mijn stage, kwam ik er al snel achter dat Ranshuijsen gebruik 
 
 ## Voor- en Nadelen
 
-==TODO==s
+Het grootste verschil tussen Git en SVN is dat SVN gecentraliseerd is. Al het werk van een ontwikkelingsteam wordt ten allen tijden opgeslagen op een centrale SVN repository. Mocht het voorkomen dat een medewerker om wat voor reden dan ook geen verbinding kan maken met deze repository, dan kan hij geen gebruik maken van de functionaliteit die SVN biedt. Dit maakt SVN onhandig voor mensen die regelmatig onderweg werken aan hun projecten, en daardoor niet altijd een internetverbinding hebben.
+
+Echter is SVN hierdoor wel veel minder complex dan Git, en daarom makkelijker om te leren. Omdat alles gecentraliseerd is, zijn er minder acties nodig om bepaalde taken uit te voeren. Neem bijvoorbeeld het uploaden van wijzigingen naar de hoofd-repository; Git heeft hier 2 commandos  (`git commit` en `git push`) voor nodig, terwijl SVN dit met 1 commando (`svn commit`) doet.
+
+Het is mogelijk om SVN te combineren met een ander versiebeheersysteem om zo SVN wel als gedecentraliseerd systeem te gebruiken. Zo is het bijvoorbeeld mogelijk om Git samen met SVN te gebruiken doormiddel van [git-svn](https://git-scm.com/docs/git-svn), een Git module die het mogelijk maakt om een lokale Git repository te koppelen met een SVN repository, om deze vervolgens synchroon te houden. Hierdoor kan een ontwikkelaar gebruik maken van alle voordelen van Git terwijl hij alsnog een SVN repository gebruikt. Echter ondersteundt deze module niet alle functionaliteit van SVN, waardoor het nog steeds nodig is om met SVN te werken om bepaalde taken uit te voeren.
 
 SVN is daarom niet per se beter of slechter dan Git, maar is simpelweg gewoon anders. Persoonlijk zal ik Git blijven gebruiken, omdat ik vaak op meerdere locaties aan mijn projecten werk en niet afhankelijk wil zijn van een internetverbinding.
 
@@ -15,6 +19,9 @@ De onderstaande screenshots laten zien dat ik tijdens mijn stage gebruik heb gem
 
 ![](\\Assets\\Images\\SVN_merge.png)  
 ^Een screenshot van _TortoiseMerge_, een tool om _Merge conflicten_ op te lossen. Genomen 13-11-2020^
+
+![](\\Assets\\Images\\SVN_new_commit.png)
+^Een screenshot van een nieewe SVN commit. Genomen 9-12-2020^
 
 ## Feedback bedrijfsbegeleider/collega
 ==TODO feedback==
