--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/10.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/10.md
@@ -1,11 +1,11 @@
 ﻿# Leerdoel 10 - Design
-Toen ik bezig was met het bedenken van leerdoelen, heb ik mijn bedrijfsbegeleider om advies gevraagd. Het viel hem op dat ik weinig aandacht besteedde aan de opmaak en uiterlijk van de documenten die ik schreef, waardoor ze waarschijnlijk niet zouden opvallen tussen de documenten van anderen. Ik heb daarom besloten dat ik meer wilde leren over hoe ik de opmaak van mijn documenten kan verbeteren.
+Aan het begin van mijn stage heb ik mijn bedrijfsbegeleider om hulp gevraagd bij het bedenken van leerdoelen. Het viel hem op dat ik weinig aandacht besteedde aan de opmaak en uiterlijk van de documenten die ik schreef, waardoor ze waarschijnlijk niet zouden opvallen tussen de documenten van anderen. Ik heb daarom besloten dat ik meer wilde leren over hoe ik de opmaak van mijn documenten kan verbeteren, en heb hier een leerdoel van gemaakt.
 
 ## Werkwijze
 
-Nadat ik deze feedback van mijn bedrijfsbegeleider had ontvangen, ben ik gelijk begonnen met de opmaak van mijn stageplan. Ik ben op het Internet gaan zoeken naar Word sjablonen die ik hiervoor zou kunnen gebruiken. De meeste sjablonen die ik tegen kwam zaten echter achter betaalmuren, waardoor ik ze niet gratis kon gebruiken. Uiteindelijk heb ik er daarom voor gekozen om de opmaak zelf op te zetten doormiddel van de tools die in Word zijn ingebouwd. Het uiteindelijke document is onderaan deze pagina te downloaden.
+Nadat ik deze feedback had ontvangen, ben ik gelijk begonnen met de opmaak van mijn stageplan. Ik ben op het Internet gaan zoeken naar Word sjablonen die ik hiervoor zou kunnen gebruiken. De meeste sjablonen die ik tegen kwam zaten echter achter betaalmuren, waardoor ik ze niet gratis kon gebruiken. Uiteindelijk heb ik er daarom voor gekozen om de opmaak zelf op te zetten doormiddel van de tools die in Word zijn ingebouwd. Het uiteindelijke document is onderaan deze pagina te downloaden.
 
-Als onderdeel van mijn stageplan heb ik ook verschillende ontwerpdocumenten opgezet. Zoals beschreven in [Leerdoel 9 - Regels & Procedures](Content/Stage3/Leerdoelen/9) hanteert Ranshuijsen een bepaalde huisstijl voor het opzetten van documenten en emails. Zij hebben hiervoor verschillende sjablonen gemaakt, die ik ook voor mijn documenten heb gebruikt. Wegens de gevoelige inhoud van deze documenten is het voor mij helaas niet mogelijk om deze op mijn website te plaatsen.
+Als onderdeel van mijn stage heb ik ook verschillende ontwerpdocumenten opgezet. Zoals beschreven in [Leerdoel 9 - Regels & Procedures](Content/Stage3/Leerdoelen/9) hanteert Ranshuijsen een bepaalde huisstijl voor het opzetten van documenten en emails. Zij hebben hiervoor verschillende sjablonen gemaakt, die ik ook voor mijn documenten heb gebruikt. Wegens de gevoelige inhoud van deze documenten is het voor mij helaas niet mogelijk om deze op mijn website te plaatsen.
 
 Ook tijdens het bouwen van deze portfoliowebsite heb ik extra aandacht besteed aan de opmaak. Toen ik aan het onderzoeken was of ik op een gemakkelijke manier Blazor kon gebruiken om mijn portfolio te maken, kwam ik [MatBlazor](https://www.matblazor.com/) tegen. MatBlazor is een zogehete _Component Library_ voor Blazor, waarmee ik gemakkelijk mijn website kon bouwen volgens de [Material Design](https://material.io/design) specificatie. 
 
