--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/2.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/2.md
@@ -1,6 +1,6 @@
 ﻿# Leerdoel 2 - Deployment
 
-Tijdens het zoeken naar informatie voor mijn 1ste- en 2dejaars projecten kwam ik vaak informatie tegen over het uitrollen van (nieuwe en bestaande) systemen. Zo kwam ik bijvoorbeeld de termen _Continuous Deployment_ en _Continuous Integration_ (CI/CD) tegen, wat refereert naar systemen die volledig automatisch andere systemen kunnen klaarmaken voor gebruik. Omdat ik meer wilde weten over hoe systemen worden uitgerolt binnen een organisatie, heb ik besloten om hier een leerdoel van te maken. Dit ook omdat ik verwacht later tijdens mijn werk regelmatig dit soort processen te moeten doorlopen.
+Tijdens het zoeken naar informatie voor mijn 1ste- en 2dejaars projecten kwam ik regelmatig informatie tegen over het uitrollen van (nieuwe en bestaande) systemen. Zo kwam ik bijvoorbeeld de termen _Continuous Deployment_ en _Continuous Integration_ (CI/CD) tegen, wat refereert naar systemen die volledig automatisch andere systemen kunnen klaarmaken voor gebruik. Omdat ik meer wilde weten over hoe systemen worden uitgerolt binnen een organisatie, heb ik besloten om hier een leerdoel van te maken. Dit ook omdat ik verwacht later tijdens mijn werk regelmatig dit soort processen te moeten doorlopen.
 
 ## Werkwijze
 
@@ -18,9 +18,9 @@ Elke keer als ik een deel van de text of code aanpas, dan wordt er automatisch e
 Het script werkt als volgt;
 
 * De Git repository waar de broncode van de website in staat wordt gedownload,
-* .NET Core wordt klaargemaakt voor gebruik,
+* .NET 5 wordt klaargemaakt voor gebruik,
 * Alle _unit tests_ (zie [Leerdoel 5 - Testen](Content/Stage3/Leerdoelen/5)) worden uitgevoerd. Mocht er een test mislukken, dan zal de update direct worden gestopt.
-* De website wordt genereerd. Alle bestanden worden door .NET Core klaargemaakt zodat een browser ze zou kunnen laden.
+* De website wordt genereerd. Alle bestanden worden door .NET 5 klaargemaakt zodat een browser ze zou kunnen laden.
 * De _base tag_ wordt aangepast, zodat alle pagina links binnen in de website correct zullen functioneren.
 * Een fix wordt toegepast zodat 404-foutpaginas worden doorgestuurd naar de hoofdpagina van mijn website, zodat Blazor deze fouten zelf kan afhandelen in plaats van dat GitHub dit doet.
 * Een fix wordt toegepast die een conflict met Jekyll oplost. Jekyll is een systeem dat Markdown en andere bestanden kan omzetten naar statische websites, en zit ingebouwd in [GitHub Pages](https://pages.github.com/). Dit zorgt er echter voor dat Blazor niet meer werk. In deze stap wordt Jekyll uitgeschakeld, waardoor Blazor weer naar behoren werkt.
