--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/3.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/3.md
@@ -2,17 +2,19 @@
 
 Het is altijd erg lastig om als nieuw lid van een ontwikkelingsteam mee te werken aan een bestaand systeem, vooral als je weinig ervaring hebt met de gebruikte technologieën. Je hebt geen idee hoe het systeem is opgebouwd, en bent daarom vaak lang bezig met het onderzoeken van de structuur voordat je echt kan gaan beginnen met werken. Om hier beter in te worden, heb ik besloten om hier een leerdoel van te maken.
 
-Als onderdeel van mijn stageopdracht heb ik moeten werken in het Customer Relations Management (CRM) systeem van Ranshuijsen. Dit systeem moest ik omzetten naar Blazor. Omdat het CRM systeem echter in het oude .NET Framework was gebouwd, moest ik eerst alles overzetten naar .NET Core. Om dit goed te kunnen doen heb ik ruim twee weken besteed aan het onderzoeken van de structuur van het systeem.
+Als onderdeel van mijn stageopdracht heb ik moeten werken in het Customer Relations Management (CRM) systeem van Ranshuijsen. Dit systeem moest ik omzetten naar Blazor. Omdat het CRM systeem echter in het oude .NET Framework was gebouwd, moest alles eerst worden overgezet naar het nieuwe .NET 5. Om dit goed te kunnen doen, ben ik in het begin van mijn stage een tijd bezig geweest met onderzoeken hoe het gehele systeem is opgebouwd.
 
 ## Werkwijze
 
-Ik begon mijn onderzoek met het zoeken naar de inlogpagina van het systeem. Inlogschermen zijn vaak een van de eerste dingen die een gebruiker zal zien als zij het systeem gebruiken, waardoor het een goed beginpunt is voor dit onderzoek. Ook bevatten inlogschermen vaak weinig functionaliteit, waardoor ze kleiner zijn dan andere paginas en daardoor meer opvallen. Door met Visual Studio door het systeem te zoeken voor termen zoals "login" en "password" kwam ik al snel deze pagina tegen.
+Ik begon mijn onderzoek met het zoeken naar de inlogpagina van het systeem. Inlogschermen zijn vaak een van de eerste dingen die een gebruiker zal zien als zij het systeem gebruiken, waardoor het een goed beginpunt is voor dit onderzoek. Ook bevatten inlogschermen vaak weinig functionaliteit, waardoor ze kleiner zijn dan andere paginas en daardoor makkelijker zijn om te vinden. Door met Visual Studio door het systeem te zoeken voor termen zoals "login" en "password" kwam ik al snel deze pagina tegen.
 
 Vanaf de loginpagina was het niet moeilijk om de hoofdpagina te vinden. Door de code te analyseren die wordt uitgevoerd op het moment dat een gebruiker op de inlogknop drukte, kwam ik er al snel achter naar welke pagina de gebruiker wordt doorgestuurd op moment dat hij inlogt. Dit gaf mij ook gelijk een beeld van hoe het inlogsysteem was opgebouwd.
 
 Het viel mij op dat de URLs van elke pagina ongeveer overeenkwamen met de locaties van bestanden in de mappenstructuur van het systeem. Als een pagina bijvoorbeeld toegankelijk was via de URL `localhost/MyArea/MyPage`, dan was `Areas/MyArea/MyPage.cshtml` het bestand waar deze pagina in stond. Met deze informatie werd het heel eenvoudig om de bestanden en code van elke pagina te vinden.
 
-Omdat het CRM een enorm systeem is met ruim 60 verschillende paginas en bijna 100 verschillende _controllers_, heb ik niet uitgezocht hoe de functionaliteit van elke pagina precies werkt. In plaats daarvan ben ik gaan kijken naar hoe het systeem gebruik maakt van zijn database. Ik heb door de paginas gaan zoeken voor een aantal veelvoorkomende datatypes, om zo uit te zoeken hoe deze precies in elkaar zitten en hoe deze worden opgeslagen in de database.
+Omdat het CRM een enorm systeem is met ruim 60 verschillende paginas en bijna 100 verschillende _controllers_, heb ik niet uitgezocht hoe de functionaliteit van elke pagina precies werkt. In plaats daarvan ben ik gaan kijken naar een ander belangrijk onderdeel van het systeem, namelijk de database van het systeem. Ik ben door de verschillende paginas gaan zoeken voor vaakvoorkomende datatypes, en ben vervolgens gaan onderzoeken hoe deze in de database worden opgeslagen.
+
+Na het afronden van dit onderzoek had ik een veel beter beeld over hoe ASP.NET precies werkt, en over hoe het CRM systeem is opgebouwd. Deze informatie heb ik goed kunnen gebruiken tijdens het uitvoeren van de migratie naar .NET 5 en Blazor.
 
 ## Bewijsmateriaal
 
