--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/4.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/4.md
@@ -3,7 +3,7 @@ Als ik een technologie goed wil beheersen, dan moet ik ook kunnen achterhalen wa
 
 ## Werkwijze
 
-Ik ben van mening dat een ontwikkelaar het beste een beeld van een technologie kan krijgen door het simpelweg zelf te gebruiken. Er zijn genoeg blog posts en nieuwsartiekelen die de voor- en nadelen van een technologie laten zien, maar dit doen zij allemaal vanaf hun eigen perspectief. Wat zij als voordelen zien, zou voor u juist nadeling kunnen zijn. En wat zij als nadelen zien, kan voor u juist voordelig zijn.
+Ik ben van mening dat een ontwikkelaar het beste een beeld van een technologie kan krijgen door het simpelweg zelf te gebruiken. Er zijn genoeg blog posts en nieuwsartiekelen die de voor- en nadelen van een technologie laten zien, maar dit doen zij allemaal vanaf hun eigen perspectief. Wat zij als voordelen zien, zou voor u juist nadeling kunnen zijn. En wat zij als nadelen zien, kan voor u juist voordelig zijn. Alleen door zelf een tijd met de technologie te experimenteren kan een ontwikkelaar er achter komen of het bruikbaar is voor zijn projecten.
 
 Door gebruik te maken van Blazor tijdens mijn stageopdracht en tijdens het opzetten van mijn portfolio, heb ik een goed beeld kunnen opbouwen van de voor- en nadelen van deze technologie. Deze informatie heb ik vervolgens verwerkt in een advies rapport (zie Bewijsmateriaal), die deze voor- en nadelen allemaal kort beschrijft.
 
