--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
@@ -8,7 +8,8 @@ Ik wilde daarom tijdens mijn stage leren hoe bedrijven zoals Ranshuijsen grote, 
 
 ## Werkwijze
 ==TODO werkwijze==  
-==hoe wordt software architecture gemaakt (yourdan?)==
+==hoe wordt software architecture gemaakt (yourdan?)==  
+==nagevraagd bij rim==
 
 ## Bewijsmateriaal
 Als bewijsmateriaal voor dit leerdoel heb ik een document opgezet waarin ik beschrijf wat mijn eerder genoemde idee precies inhoudt, wat voor een functionaliteit het systeem zal bevatten, en hoe het systeem is gestructureerd. Dit document zal ik later kunnen gebruiken om alsnog dit systeem te bouwen.
