--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/7.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/7.md
@@ -1,6 +1,6 @@
 ﻿# Leerdoel 7 - Design Patterns
 
-Ik heb tijdens het zoeken naar informatie voor mijn 1ste- en 2dejaars projecten meerdere malen de term Design Patterns voorbij zien komen, zonder echt te weten wat dit precies inhield. Bij het vak Web Development werd het al een stukje duidelijker, omdat wij hierbij over het MVC-design pattern hadden geleerd. Ik wist echter dat er meer van deze design patterns waren, en wilde hier meer over leren.
+Ik heb tijdens het zoeken naar informatie voor mijn 1ste- en 2dejaars projecten meerdere malen de term Design Patterns voorbij zien komen, zonder echt te weten wat dit precies inhield. Bij het vak Web Development werd het al een stukje duidelijker, omdat wij hierbij over MVC hadden geleerd, een design pattern dat voornamelijk wordt gebruikt voor webapplicaties. Ik wist echter dat er meer van deze design patterns waren, en wilde hier meer over leren.
 
 Het bleek dat de twee technologieën die ik voor mijn stageopdracht moest gebruiken (ASP.NET Core en Blazor) beide gebruik maakte van Dependency Injection. Tijdens het werken aan mijn stageopdracht ben ik daarom ook al vrij snel hiermee in aanraking gekomen. Na informatie over Dependency Injection in ASP.NET Core op het Internet op te zoeken en een voorbeeld van een medewerker te analyseren, is het mij gelukt om mijn eigen service te bouwen. Deze service kan in verschillende onderdelen van het CRM worden geïnjecteerd om zo informatie over de ingelogde gebruiker op te kunnen halen.
 
@@ -22,9 +22,10 @@ Dit kan worden opgelost doormiddel van Dependency Injection. In plaats van dat d
 
 ## Bewijsmateriaal
 
+Voor mijn stageopdracht heb ik een *UserService* gemaakt. Via deze service kunnen alle onderdelen van het vernieuwde CRM systeem van Ranshuijsen de gegevens van de huidige ingelogde gebruiker ophalen. Ook heb ik de functionaliteit van een aantal paginas van het systeem omgezet naar Blazor, om zo nog meer met Blazor te kunnen experimenteren.  
+  
 Zoals eerder vermeld, is deze website gemaakt met Blazor. Blazor heeft het Dependency Injection design pattern al geimplementeerd, en geeft ontwikkelaars de mogelijkheid om hier verder op te bouwen. Dit heb ik gedaan door een  *DocumentService* te bouwen. Deze service geeft mij de mogelijkheid om in mijn gehele applicatie _Markdown_ bestanden te laden en om te zetten naar HTML, zodat ik ze op een pagina kan laten zien.
 
-Voor mijn stageopdracht heb ik een *UserService* gemaakt. Via deze service kunnen alle onderdelen van het vernieuwde CRM systeem van Ranshuijsen de gegevens van de huidige ingelogde gebruiker ophalen.
 
 ## Feedback bedrijfsbegeleider/collega
 ==TODO feedback==
