--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/8.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/8.md
@@ -14,6 +14,12 @@ Microsoft is bezig met het ontwikkelen van drie andere Blazor varianten, die elk
 
 De voor- en nadelen van deze technologie zijn te lezen in het [Adviesrapport](Content/Stage3/Bewijsmateriaal/4) dat ik heb geschreven als bewijsmateriaal voor [Leerdoel 4](Content/Stage3/Leerdoelen/4). Voor meer informatie over de verschillende varianten van Blazor, zie de [ASP.NET Core Blazor hosting models](https://docs.microsoft.com/en-us/aspnet/core/blazor/hosting-models?view=aspnetcore-3.1) pagina op de officiele Microsoft website.
 
+## Werkwijze  
+  
+Het meerendeel van het werk dat ik met Blazor heb uitgevoerd tijdens mijn stage was als onderdeel van mijn stageopdracht. Informatie over mijn taken en hoe ik dit heb aangepakt is [hier](Content/Stage3/Stageopdracht) te vinden.
+
+De kennis die ik heb opgedaan tijdens het werken aan mijn stageopdracht heb ik goed kunnen gebruiken tijdens het opzetten van deze website. Deze gehele website is namelijk gebouwd met behulp van Blazor WASM.
+
 ## Bewijsmateriaal
 
 Als onderdeel van mijn stageopdracht heb ik het CRM systeem van Ranshuijsen deels omgezet naar Blazor, een vrij recent onderdeel van Microsoft’s ASP.NET Core framework. Ik heb dan ook dit leerdoel behaald door deze nieuwe technologie te bestuderen en te gebruiken tijdens mijn stageopdracht. Zie [deze pagina](Content/Stage3/Stageopdracht) voor meer informatie over de werkzaamheden die ik als onderdeel van mijn stageopdracht heb uitgevoerd.
