--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/9.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/9.md
@@ -22,7 +22,12 @@ Ranshuijsen heeft ook een eigen huijsstijl voor alle documenten en emails die zi
 ## ISO 27001 Certificering
 Ranshuijsen voldoet aan de eisen die gesteld worden in [ISO 27001](https://nl.wikipedia.org/wiki/ISO/IEC_27001). Dit betekent dat alle medewerkers van Ranshuijsen zich aan een aantal regels moeten houden met betrekking tot informatiebeveiliging.
 
-Het is bijvoorbeeld voor medewerkers niet toegestaan om data op te slaan op persoonlijke apparaten of mee naar huis te nemen. Medewerkers die willen thuiswerken moeten daarom via _Remote Desktop_ verbinding maken met hun werkcomputer, om vervolgens op afstand hierop te werken.
+Het is bijvoorbeeld voor medewerkers niet toegestaan om data op te slaan op persoonlijke apparaten of mee naar huis te nemen. Medewerkers die willen thuiswerken moeten daarom via _Remote Desktop_ verbinding maken met hun werkcomputer, om vervolgens op afstand hierop te werken. In verband met de COVID-19 pandemie heb ik dit ook een groot deel van mijn stage daan.
+
+## Urenregistratie en Kaizen
+Ranshuijsen maakt gebruik van _Kaizen Cockpit_. Dit is een soort to-do systeem voor organisaties waarin zij kunnen bijhouden welke taken nog moeten worden afgerondt en wat de status hiervan is. Zo heeft Ranshuijsen tickets in dit systeem gemaakt over bijvoorbeeld welke functionaliteit nog aan een systeem moet worden toegevoegd, of welke fouten er nog moeten worden opgelost.  
+  
+De _Kaizen Cockpit_ van Ranshuijsen staat verbonden met het urenregistratie deel van het CRM systeem. Via deze koppeling kunnen medewerkers vanuit de _Kaizen Cockpit_ aangeven aan welke taken zij op dat moment werken, zodat het CRM kan bijhouden hoe lang zij hiermee zijn beziggeweest.
 
 ## Feedback bedrijfsbegeleider/collega
 ==TODO feedback==
